@@ -33,6 +33,7 @@ import java.security.Permission;
 import java.security.Policy;
 import java.security.URIParameter;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
@@ -123,7 +124,8 @@ public class PolicyUtilTests extends ESTestCase {
     public void testPolicyMissingCodebaseProperty() throws Exception {
         Path plugin = makeDummyPlugin("missing-codebase.policy", "foo.jar");
         URL policyFile = plugin.resolve(PluginInfo.ES_PLUGIN_POLICY).toUri().toURL();
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> PolicyUtil.readPolicy(policyFile, Map.of()));
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
+            () -> PolicyUtil.readPolicy(policyFile, Collections.emptyMap()));
         assertThat(e.getMessage(), containsString("Unknown codebases [codebase.doesnotexist] in policy file"));
     }
 
